[gd_scene load_steps=6 format=3 uid="uid://dqlrx8uk11qh5"]

[ext_resource type="Script" path="res://main/main_game_scene_pages/属性.gd" id="1_1aalq"]
[ext_resource type="Texture2D" uid="uid://dwho7fs0wb4xm" path="res://assets/character_creation/buttons/minus.png" id="1_s4yqy"]
[ext_resource type="Texture2D" uid="uid://dr3d8gkcpdt5" path="res://assets/character_creation/buttons/add.png" id="2_b6a8r"]
[ext_resource type="StyleBox" uid="uid://clv50blojv0tt" path="res://assets/character_creation/GUI/label_style_box_flat.tres" id="3_rqr3i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dptsr"]

[node name="属性" type="Panel"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_dptsr")
script = ExtResource("1_1aalq")

[node name="AttributesLabelContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 304.0
offset_top = 139.0
offset_right = 352.0
offset_bottom = 398.0

[node name="Strength" type="Label" parent="AttributesLabelContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "力量"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dexterity" type="Label" parent="AttributesLabelContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "敏捷"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Constitution" type="Label" parent="AttributesLabelContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "体质"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Intelligence" type="Label" parent="AttributesLabelContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "智力"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wisdom" type="Label" parent="AttributesLabelContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "感知"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Charisma" type="Label" parent="AttributesLabelContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 24
text = "魅力"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttributesValueContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 368.0
offset_top = 139.0
offset_right = 608.0
offset_bottom = 399.0

[node name="StrContainer" type="HBoxContainer" parent="AttributesValueContainer"]
layout_mode = 2

[node name="StrMinus" type="Button" parent="AttributesValueContainer/StrContainer"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("1_s4yqy")
flat = true

[node name="StrValue" type="Label" parent="AttributesValueContainer/StrContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StrAdd" type="Button" parent="AttributesValueContainer/StrContainer"]
layout_mode = 2
size_flags_horizontal = 2
icon = ExtResource("2_b6a8r")
flat = true

[node name="DexContainer" type="HBoxContainer" parent="AttributesValueContainer"]
layout_mode = 2

[node name="DexMinus" type="Button" parent="AttributesValueContainer/DexContainer"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("1_s4yqy")
flat = true

[node name="DexValue" type="Label" parent="AttributesValueContainer/DexContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DexAdd" type="Button" parent="AttributesValueContainer/DexContainer"]
layout_mode = 2
size_flags_horizontal = 2
icon = ExtResource("2_b6a8r")
flat = true

[node name="ConContainer" type="HBoxContainer" parent="AttributesValueContainer"]
layout_mode = 2

[node name="ConMinus" type="Button" parent="AttributesValueContainer/ConContainer"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("1_s4yqy")
flat = true

[node name="ConValue" type="Label" parent="AttributesValueContainer/ConContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConAdd" type="Button" parent="AttributesValueContainer/ConContainer"]
layout_mode = 2
size_flags_horizontal = 2
icon = ExtResource("2_b6a8r")
flat = true

[node name="IntContainer" type="HBoxContainer" parent="AttributesValueContainer"]
layout_mode = 2

[node name="IntMinus" type="Button" parent="AttributesValueContainer/IntContainer"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("1_s4yqy")
flat = true

[node name="IntValue" type="Label" parent="AttributesValueContainer/IntContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntAdd" type="Button" parent="AttributesValueContainer/IntContainer"]
layout_mode = 2
size_flags_horizontal = 2
icon = ExtResource("2_b6a8r")
flat = true

[node name="WisContainer" type="HBoxContainer" parent="AttributesValueContainer"]
layout_mode = 2

[node name="WisMinus" type="Button" parent="AttributesValueContainer/WisContainer"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("1_s4yqy")
flat = true

[node name="WisValue" type="Label" parent="AttributesValueContainer/WisContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WisAdd" type="Button" parent="AttributesValueContainer/WisContainer"]
layout_mode = 2
size_flags_horizontal = 2
icon = ExtResource("2_b6a8r")
flat = true

[node name="ChaContainer" type="HBoxContainer" parent="AttributesValueContainer"]
layout_mode = 2

[node name="ChaMinus" type="Button" parent="AttributesValueContainer/ChaContainer"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("1_s4yqy")
flat = true

[node name="ChaValue" type="Label" parent="AttributesValueContainer/ChaContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChaAdd" type="Button" parent="AttributesValueContainer/ChaContainer"]
layout_mode = 2
size_flags_horizontal = 2
icon = ExtResource("2_b6a8r")
flat = true

[node name="LevelupPointsContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 75.0
offset_right = 544.0
offset_bottom = 115.0

[node name="LevelupPointsLabel" type="Label" parent="LevelupPointsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "剩余可分配属性点:"
vertical_alignment = 1

[node name="LevelupPointsValue" type="Label" parent="LevelupPointsContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("3_rqr3i")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reset" type="Button" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 419.0
offset_right = 400.0
offset_bottom = 452.0
theme_override_font_sizes/font_size = 24
text = "重置"

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 419.0
offset_right = 520.0
offset_bottom = 452.0
theme_override_font_sizes/font_size = 24
text = "保存"

[node name="Stats" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 712.0
offset_top = 75.0
offset_right = 1080.0
offset_bottom = 512.0
theme_override_styles/normal = ExtResource("3_rqr3i")

[connection signal="pressed" from="AttributesValueContainer/StrContainer/StrMinus" to="." method="_on_str_minus_pressed"]
[connection signal="pressed" from="AttributesValueContainer/StrContainer/StrAdd" to="." method="_on_str_add_pressed"]
[connection signal="pressed" from="AttributesValueContainer/DexContainer/DexMinus" to="." method="_on_dex_minus_pressed"]
[connection signal="pressed" from="AttributesValueContainer/DexContainer/DexAdd" to="." method="_on_dex_add_pressed"]
[connection signal="pressed" from="AttributesValueContainer/ConContainer/ConMinus" to="." method="_on_con_minus_pressed"]
[connection signal="pressed" from="AttributesValueContainer/ConContainer/ConAdd" to="." method="_on_con_add_pressed"]
[connection signal="pressed" from="AttributesValueContainer/IntContainer/IntMinus" to="." method="_on_int_minus_pressed"]
[connection signal="pressed" from="AttributesValueContainer/IntContainer/IntAdd" to="." method="_on_int_add_pressed"]
[connection signal="pressed" from="AttributesValueContainer/WisContainer/WisMinus" to="." method="_on_wis_minus_pressed"]
[connection signal="pressed" from="AttributesValueContainer/WisContainer/WisAdd" to="." method="_on_wis_add_pressed"]
[connection signal="pressed" from="AttributesValueContainer/ChaContainer/ChaMinus" to="." method="_on_cha_minus_pressed"]
[connection signal="pressed" from="AttributesValueContainer/ChaContainer/ChaAdd" to="." method="_on_cha_add_pressed"]
